// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Legacy ARCHITECTURE_REVIEW_PIPELINE_PHASES — 11 phases intact > matches full snapshot 1`] = `
[
  {
    "abbreviation": "Map",
    "agentId": "architecture-mapper",
    "name": "Mapeamento Arquitetural",
    "number": 1,
    "resetable": true,
    "stage": 1,
    "stageName": "Review",
    "type": "auto",
  },
  {
    "abbreviation": "Target",
    "agentId": "architecture-target-triage",
    "name": "Triagem de Alvos",
    "number": 2,
    "resetable": true,
    "stage": 1,
    "stageName": "Review",
    "type": "conversation",
  },
  {
    "abbreviation": "Diag",
    "agentId": "architecture-diagnostician",
    "name": "Diagnostico Arquitetural",
    "number": 3,
    "resetable": true,
    "stage": 2,
    "stageName": "Evidence",
    "type": "auto",
  },
  {
    "abbreviation": "Decide",
    "agentId": "architecture-decision-interviewer",
    "name": "Entrevista de Decisao",
    "number": 4,
    "resetable": true,
    "stage": 3,
    "stageName": "Decision",
    "type": "conversation",
  },
  {
    "abbreviation": "Spec",
    "agentId": "spec-builder",
    "name": "Spec Generation",
    "number": 5,
    "resetable": true,
    "stage": 4,
    "stageName": "Spec",
    "type": "auto",
  },
  {
    "abbreviation": "Val",
    "agentId": "arch-spec-validator",
    "name": "Spec Validation",
    "number": 6,
    "resetable": false,
    "stage": 4,
    "stageName": "Spec",
    "type": "conversation",
  },
  {
    "abbreviation": "Enrich",
    "agentId": "architecture-spec-enricher",
    "name": "Spec Enricher",
    "number": 7,
    "resetable": false,
    "stage": 4,
    "stageName": "Spec",
    "type": "conversation",
  },
  {
    "abbreviation": "Plan",
    "agentId": "harness-planner",
    "name": "Planner",
    "number": 8,
    "resetable": true,
    "stage": 5,
    "stageName": "Execution",
    "type": "auto",
  },
  {
    "abbreviation": "SVal",
    "agentId": "sprint-validator",
    "name": "Sprint Validator",
    "number": 9,
    "resetable": true,
    "stage": 5,
    "stageName": "Execution",
    "type": "conversation",
  },
  {
    "abbreviation": "Code",
    "agentId": "harness-coder",
    "name": "Coder",
    "number": 10,
    "resetable": false,
    "stage": 5,
    "stageName": "Execution",
    "type": "loop",
  },
  {
    "abbreviation": "Eval",
    "agentId": "harness-evaluator",
    "name": "Evaluator",
    "number": 11,
    "resetable": false,
    "stage": 5,
    "stageName": "Execution",
    "type": "loop",
  },
]
`;

exports[`Legacy FEATURE_PIPELINE_PHASES — 14 phases intact > matches full snapshot 1`] = `
[
  {
    "abbreviation": "FDisc",
    "agentId": "feat-discovery",
    "name": "Feature Discovery",
    "number": 1,
    "resetable": true,
    "stage": 1,
    "stageName": "Discovery",
    "type": "conversation",
  },
  {
    "abbreviation": "PRD",
    "agentId": "feat-prd-generator",
    "name": "PRD Generator",
    "number": 2,
    "resetable": true,
    "stage": 2,
    "stageName": "PRD",
    "type": "auto",
  },
  {
    "abbreviation": "Val",
    "agentId": "feat-prd-validator",
    "name": "PRD Validator",
    "number": 3,
    "resetable": false,
    "stage": 2,
    "stageName": "PRD",
    "type": "conversation",
  },
  {
    "abbreviation": "PRD+",
    "agentId": "feat-prd-completo",
    "name": "PRD Completo",
    "number": 4,
    "resetable": true,
    "stage": 2,
    "stageName": "PRD",
    "type": "auto",
  },
  {
    "abbreviation": "DB",
    "agentId": "feat-tech-database",
    "groupId": "tech",
    "groupLabel": "TECH",
    "name": "Database",
    "number": 5,
    "resetable": false,
    "stage": 3,
    "stageName": "Tech",
    "type": "conversation",
  },
  {
    "abbreviation": "BE",
    "agentId": "feat-tech-backend",
    "groupId": "tech",
    "groupLabel": "TECH",
    "name": "Backend",
    "number": 6,
    "resetable": false,
    "stage": 3,
    "stageName": "Tech",
    "type": "conversation",
  },
  {
    "abbreviation": "FE",
    "agentId": "feat-tech-frontend",
    "groupId": "tech",
    "groupLabel": "TECH",
    "name": "Frontend",
    "number": 7,
    "resetable": false,
    "stage": 3,
    "stageName": "Tech",
    "type": "conversation",
  },
  {
    "abbreviation": "SEC",
    "agentId": "feat-tech-security",
    "groupId": "tech",
    "groupLabel": "TECH",
    "name": "Security",
    "number": 8,
    "resetable": false,
    "stage": 3,
    "stageName": "Tech",
    "type": "conversation",
  },
  {
    "abbreviation": "Spec",
    "agentId": "spec-builder",
    "name": "Spec Generation",
    "number": 9,
    "resetable": true,
    "stage": 4,
    "stageName": "Spec",
    "type": "auto",
  },
  {
    "abbreviation": "Enrich",
    "agentId": "spec-enricher",
    "name": "Spec Enricher",
    "number": 10,
    "resetable": false,
    "stage": 4,
    "stageName": "Spec",
    "type": "conversation",
  },
  {
    "abbreviation": "Plan",
    "agentId": "harness-planner",
    "name": "Planner",
    "number": 11,
    "resetable": true,
    "stage": 5,
    "stageName": "Execution",
    "type": "auto",
  },
  {
    "abbreviation": "SVal",
    "agentId": "sprint-validator",
    "name": "Sprint Validator",
    "number": 12,
    "resetable": true,
    "stage": 5,
    "stageName": "Execution",
    "type": "conversation",
  },
  {
    "abbreviation": "Code",
    "agentId": "harness-coder",
    "name": "Coder",
    "number": 13,
    "resetable": false,
    "stage": 5,
    "stageName": "Execution",
    "type": "loop",
  },
  {
    "abbreviation": "Eval",
    "agentId": "harness-evaluator",
    "name": "Evaluator",
    "number": 14,
    "resetable": false,
    "stage": 5,
    "stageName": "Execution",
    "type": "loop",
  },
]
`;

exports[`Legacy PIPELINE_PHASES (development) — 14 phases intact > matches full snapshot (regression guard) 1`] = `
[
  {
    "abbreviation": "Disc",
    "agentId": "discovery-agent",
    "name": "Discovery",
    "number": 1,
    "resetable": true,
    "stage": 1,
    "stageName": "Discovery",
    "type": "conversation",
  },
  {
    "abbreviation": "PRD",
    "agentId": "prd-generator",
    "name": "PRD Generator",
    "number": 2,
    "resetable": true,
    "stage": 2,
    "stageName": "PRD",
    "type": "auto",
  },
  {
    "abbreviation": "Val",
    "agentId": "prd-validator",
    "name": "PRD Validator",
    "number": 3,
    "resetable": false,
    "stage": 2,
    "stageName": "PRD",
    "type": "conversation",
  },
  {
    "abbreviation": "PRD+",
    "agentId": "prd-generator",
    "name": "PRD Completo",
    "number": 4,
    "resetable": true,
    "stage": 2,
    "stageName": "PRD",
    "type": "auto",
  },
  {
    "abbreviation": "DB",
    "agentId": "tech-database",
    "groupId": "tech",
    "groupLabel": "TECH",
    "name": "Database",
    "number": 5,
    "resetable": false,
    "stage": 3,
    "stageName": "Tech",
    "type": "conversation",
  },
  {
    "abbreviation": "BE",
    "agentId": "tech-backend",
    "groupId": "tech",
    "groupLabel": "TECH",
    "name": "Backend",
    "number": 6,
    "resetable": false,
    "stage": 3,
    "stageName": "Tech",
    "type": "conversation",
  },
  {
    "abbreviation": "FE",
    "agentId": "tech-frontend",
    "groupId": "tech",
    "groupLabel": "TECH",
    "name": "Frontend",
    "number": 7,
    "resetable": false,
    "stage": 3,
    "stageName": "Tech",
    "type": "conversation",
  },
  {
    "abbreviation": "SEC",
    "agentId": "tech-security",
    "groupId": "tech",
    "groupLabel": "TECH",
    "name": "Security",
    "number": 8,
    "resetable": false,
    "stage": 3,
    "stageName": "Tech",
    "type": "conversation",
  },
  {
    "abbreviation": "Spec",
    "agentId": "spec-builder",
    "name": "Spec Generation",
    "number": 9,
    "resetable": true,
    "stage": 4,
    "stageName": "Spec",
    "type": "auto",
  },
  {
    "abbreviation": "Enrich",
    "agentId": "spec-enricher",
    "name": "Spec Enricher",
    "number": 10,
    "resetable": false,
    "stage": 4,
    "stageName": "Spec",
    "type": "conversation",
  },
  {
    "abbreviation": "Plan",
    "agentId": "harness-planner",
    "name": "Planner",
    "number": 11,
    "resetable": true,
    "stage": 5,
    "stageName": "Execution",
    "type": "auto",
  },
  {
    "abbreviation": "SVal",
    "agentId": "sprint-validator",
    "name": "Sprint Validator",
    "number": 12,
    "resetable": true,
    "stage": 5,
    "stageName": "Execution",
    "type": "conversation",
  },
  {
    "abbreviation": "Code",
    "agentId": "harness-coder",
    "name": "Coder",
    "number": 13,
    "resetable": false,
    "stage": 5,
    "stageName": "Execution",
    "type": "loop",
  },
  {
    "abbreviation": "Eval",
    "agentId": "harness-evaluator",
    "name": "Evaluator",
    "number": 14,
    "resetable": false,
    "stage": 5,
    "stageName": "Execution",
    "type": "loop",
  },
]
`;

exports[`Legacy SECURITY_PIPELINE_PHASES — 11 phases intact > matches full snapshot 1`] = `
[
  {
    "abbreviation": "Prof",
    "agentId": "repo-profiler",
    "name": "Repo Profiler",
    "number": 1,
    "resetable": true,
    "stage": 1,
    "stageName": "Scan",
    "type": "auto",
  },
  {
    "abbreviation": "Audit",
    "agentId": "multi-agent",
    "name": "Security Audit",
    "number": 2,
    "resetable": true,
    "stage": 1,
    "stageName": "Scan",
    "type": "auto",
  },
  {
    "abbreviation": "Dedup",
    "agentId": "security-deduplicator",
    "name": "Deduplicador",
    "number": 3,
    "resetable": true,
    "stage": 1,
    "stageName": "Scan",
    "type": "auto",
  },
  {
    "abbreviation": "Sec",
    "agentId": "security-skeptic-security",
    "groupId": "skeptic",
    "groupLabel": "VALIDAÇÃO",
    "name": "Skeptic Security",
    "number": 4,
    "resetable": false,
    "stage": 2,
    "stageName": "Validacao",
    "type": "conversation",
  },
  {
    "abbreviation": "Qual",
    "agentId": "security-skeptic-quality",
    "groupId": "skeptic",
    "groupLabel": "VALIDAÇÃO",
    "name": "Skeptic Quality",
    "number": 5,
    "resetable": false,
    "stage": 2,
    "stageName": "Validacao",
    "type": "conversation",
  },
  {
    "abbreviation": "Spec",
    "agentId": "spec-builder",
    "name": "SPEC Generator",
    "number": 6,
    "resetable": true,
    "stage": 3,
    "stageName": "Spec",
    "type": "auto",
  },
  {
    "abbreviation": "Enrich",
    "agentId": "spec-enricher",
    "name": "SPEC Enricher",
    "number": 7,
    "resetable": false,
    "stage": 3,
    "stageName": "Spec",
    "type": "conversation",
  },
  {
    "abbreviation": "Plan",
    "agentId": "harness-planner",
    "name": "Planner",
    "number": 8,
    "resetable": true,
    "stage": 4,
    "stageName": "Execucao",
    "type": "auto",
  },
  {
    "abbreviation": "SVal",
    "agentId": "sprint-validator",
    "name": "Sprint Validator",
    "number": 9,
    "resetable": true,
    "stage": 4,
    "stageName": "Execucao",
    "type": "conversation",
  },
  {
    "abbreviation": "Code",
    "agentId": "harness-coder",
    "name": "Coder",
    "number": 10,
    "resetable": false,
    "stage": 4,
    "stageName": "Execucao",
    "type": "loop",
  },
  {
    "abbreviation": "Eval",
    "agentId": "harness-evaluator",
    "name": "Evaluator",
    "number": 11,
    "resetable": false,
    "stage": 4,
    "stageName": "Execucao",
    "type": "loop",
  },
]
`;
